--- a/Downloads/Pirate Bomb (Git1)/package.json
+++ b/Downloads/Pirate Bomb (Git1)/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "build": "npm install",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -13,7 +14,6 @@
     "lint:fix": "eslint . --fix",
     "db:migrate": "node backend/utils/migrate.js",
     "db:seed": "node backend/utils/seed.js",
-    "build": "npm install && npm run db:migrate",
     "pm2:start": "pm2 start ecosystem.config.js",
     "pm2:stop": "pm2 stop ecosystem.config.js",
     "pm2:restart": "pm2 restart ecosystem.config.js"
@@ -71,10 +71,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/rueafk-byte/devkaboom"
+    "url": "https://github.com/nftdcby2-design/kabomb"
   },
   "bugs": {
-    "url": "https://github.com/rueafk-byte/devkaboom/issues"
+    "url": "https://github.com/nftdcby2-design/kabomb/issues"
   },
-  "homepage": "https://github.com/rueafk-byte/devkaboom#readme"
+  "homepage": "https://github.com/nftdcby2-design/kabomb#readme"
 }
